fix(style): less spacing
See: #1

--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -1,6 +1,6 @@
 .wrapper {
-  margin-bottom: 100px;
-  padding-top: 100px;
+  margin-bottom: 50px;
+  padding-top: 50px;
 }
 
 .content {
